--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,9 @@
 # ChangeLog
 
+* Sun Dec 16 2012 Guillaume Kulakowski <guillaume DOT kulakowski AT fedoraproject DOT org> - 1.3.0
+ - Use IncludeOptional instead of Include to prevent restart error
+ - Fix issue 162 and use service command
+
 * Mon Jan 17 2011 Guillaume Kulakowski <guillaume DOT kulakowski AT fedoraproject DOT org> - 1.2.0
  - Add include in conf.d
 
